--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <img src="kratinjay.png" alt="Kratinjay">
     <hr>
     <div class="text-center" id="icons">
-      <a href="http://t.me/kratinjay" target="_blank"><i class="fab fa-telegram"></i></a>
+      <a href="https://linkedin.com/in/kratinjay" target="_blank"><i class="fab fa-linkedin"></i></a>
       <a href="https://facebook.com/kratinjay" target="_blank"><i class="fab fa-facebook"></i></a>
       <a href="https://instagram.com/kratinjay" target="_blank"><i class="fab fa-instagram"></i></a>
       <a href="https://twitter.com/kratinjay" target="_blank"><i class="fab fa-twitter"></i></a>
