--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </div>
 
   <div class="container" id="main">
-    <img src="kratinjay.png" alt="Kratinjay">
+    <img src="http://github.com/kratinjay.png" alt="Kratinjay">
     <hr>
     <div class="text-center" id="icons">
       <a href="https://linkedin.com/in/kratinjay" target="_blank"><i class="fab fa-linkedin"></i></a>
