--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css?family=Special+Elite&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/ad9ae181fa.js" crossorigin="anonymous"></script>
-  <link rel="shortcut icon" href="kratinjay.png" type="image/x-icon">
+  <link rel="shortcut icon" href="http://github.com/kratinjay.png" type="image/x-icon">
 </head>
 
 <body>
