--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <title> Kratinjay </title>
     <!--Useful Meta Elements-->
     <meta charset="UTf-8">
-    <meta name="viewport" content="width:device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport"
+        content="width:device-width, height=device-height, initial-scale=1 user-scalable=no, shrink-to-fit=no">
+    <meta name="keywords" content="Kratinjay, kratinjay, kratinjay gupta, Kanpur,">
     <!--Links to Stylesheet-->
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:700&display=swap" rel="stylesheet">
@@ -63,7 +65,7 @@
 
         <div class="mainDiv">
             <div class="container" id="main">
-                <img src="kratinjay.png" alt="Kratinjay" />
+                <img src="main.jpg" alt="Kratinjay" />
             </div>
             <div id="typeDiv">
 
