--- a/index.html
+++ b/index.html
@@ -3,31 +3,35 @@
 
 <head>
     <title> Kratinjay </title>
+
     <!--Useful Meta Elements-->
     <meta charset="UTf-8">
     <meta name="viewport"
         content="width:device-width, height=device-height, initial-scale=1 user-scalable=no, shrink-to-fit=no">
-    <meta name="keywords" content="Kratinjay, kratinjay, kratinjay gupta, Kanpur,">
+    <meta name="keywords" content="Kratinjay, kratinjay, kratinjay gupta, Kanpur">
+
     <!--Links to Stylesheet-->
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="icon" href="kratinjay.svg" type="image/svg" sizes="16x16">
-
-
-
+    <link rel="icon" href="favicon.png" type="image/png" sizes="16x16">
 </head>
 
 <body>
-    <div id="particles-js">
-        <div id="bg">
+    <div>
+
+        <!--Navbar + Header-->
+        <div id="navheader">
+
             <div id="header" class="grow">
-                KRATINJAY
+                <a href="#home"> KRATINJAY </a>
             </div>
 
-            <hr>
-            <nav class="navbar navbar-expand-lg navbar-light center">
+            <hr color="#E0E0E0">
+
+            <!--navbar starts-->
+            <nav class="navbar navbar-expand-lg navbar-light">
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
                     aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -35,17 +39,17 @@
                 <!--main Division tag of navbar-->
                 <div class="collapse navbar-collapse mainDiv" id="navbarNavDropdown">
                     <ul class="navbar-nav">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="#">HOME <span class="sr-only">(current)</span></a>
+                        <li>
+                            <a class="nav-link" href="#home">HOME</a>
                         </li>
                         <li>
-                            <a class="nav-link" href="#">ABOUT</a>
+                            <a class="nav-link" href="#about">ABOUT</a>
                         </li>
                         <li>
-                            <a class="nav-link" href="#">PORTFOLIO</a>
+                            <a class="nav-link" href="#portfolio">PORTFOLIO</a>
                         </li>
                         <li>
-                            <a class="nav-link" href="#">CONTACT</a>
+                            <a class="nav-link" href="#contact">CONTACT</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
@@ -53,38 +57,80 @@
                                 PROJECTS
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                <a class="dropdown-item" href="#">Action</a>
-                                <a class="dropdown-item" href="#">Another action</a>
-                                <a class="dropdown-item" href="#">Something else here</a>
+                                <a class="dropdown-item" href="#">Under Development...</a>
+                                <a class="dropdown-item" href="#">...</a>
+                                <a class="dropdown-item" href="#">...</a>
                             </div>
                         </li>
                     </ul>
                 </div>
             </nav>
+            <!--navbar ends-->
+        </div>
+        <!--Navbar + Header-->
+
+        <div id="home">
+            <!--my image div tag-->
+            <div id="main">
+                <img src="kratinjaymain.png" alt="Kratinjay" />
+            </div>
         </div>
 
-        <div class="mainDiv">
-            <div class="container" id="main">
-                <img src="kratinjaymain.png" alt="Kratinjay"/>
-            </div>
-            <div id="typeDiv">
 
-            </div>
+        <!--about section starts-->
+        <div id="about">
+            <center>
+                <p>
+                    Hi,👋 My name is Kratinjay Gupta.</br> I am Computer Science student, pursuing Bachelors in Computer
+                    Application(BCA), currently learning Full-Stack Web Development, I love collaborating in and Open
+                    Source. I’m a 21
+                    year old Web Developer living in Kanpur, India.
+                </p>
+            </center>
         </div>
-        <!--particle js-->
-        <script type="text/javascript" src="particles.js"></script>
-        <script type="text/javascript" src="app.js"></script>
-        <!--Bootstrap JS esstentials-->
-        <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-            integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
-        </script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-            integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
-        </script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-            integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
-        </script>
+
+        <!--portfolio section starts-->
+        <div id="portfolio">
+            <center>
+                <h1>Coming Soon..</h1>
+            </center>
+        </div>
+
+        <!--Contact section starts-->
+        <div id="contact">
+            <center>
+                <div class="grow" id="icons">
+                    <a href="https://linkedin.com/in/kratinjay" target="_blank"><i class="fab fa-linkedin"></i></a>
+                    <a href="https://facebook.com/kratinjay" target="_blank"><i class="fab fa-facebook"></i></a>
+                    <a href="https://instagram.com/kratinjay" target="_blank"><i class="fab fa-instagram"></i></a>
+                    <a href="https://twitter.com/kratinjay" target="_blank"><i class="fab fa-twitter"></i></a>
+                    <a href="https://github.com/kratinjay" target="_blank"><i class="fab fa-github"></i></a>
+                </div>
+
+            </center>
+        </div>
+
+        <footer>
+            <p>Hosted on GITHUB Pages</p>
+        </footer>
+
     </div>
 </body>
+
+<!--particle js-->
+<script type="text/javascript" src="particles.js"></script>
+<script type="text/javascript" src="app.js"></script>
+<!--Bootstrap JS esstentials-->
+<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+    integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
+</script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+</script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
+</script>
+<script src="https://kit.fontawesome.com/ad9ae181fa.js" crossorigin="anonymous"></script>
+<script src="typed.js"></script>
 
 </html>
