--- a/index.html
+++ b/index.html
@@ -40,19 +40,19 @@
                 <div class="collapse navbar-collapse mainDiv" id="navbarNavDropdown">
                     <ul class="navbar-nav">
                         <li>
-                            <a class="nav-link" href="#home">HOME</a>
+                            <a style="color:#E0E0E0; text-shadow: 2px 2px 4px #000000" class="nav-link" href="#home">HOME</a>
                         </li>
                         <li>
-                            <a class="nav-link" href="#about">ABOUT</a>
+                            <a style="color:#E0E0E0; text-shadow: 2px 2px 4px #000000" class="nav-link" href="#about">ABOUT</a>
                         </li>
                         <li>
-                            <a class="nav-link" href="#portfolio">PORTFOLIO</a>
+                            <a style="color:#E0E0E0; text-shadow: 2px 2px 4px #000000" class="nav-link" href="#portfolio">PORTFOLIO</a>
                         </li>
                         <li>
-                            <a class="nav-link" href="#contact">CONTACT</a>
+                            <a style="color:#E0E0E0; text-shadow: 2px 2px 4px #000000" class="nav-link" href="#contact">CONTACT</a>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+                            <a  style="color:#E0E0E0; text-shadow: 2px 2px 4px #000000" class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 PROJECTS
                             </a>
@@ -74,6 +74,11 @@
             <div id="main">
                 <img src="kratinjaymain.png" alt="Kratinjay" />
             </div>
+            <center>
+                <div id="but-div">
+                    <button class="button grow"><a style="text-decoration: none;" href="#about">About Me</a></button>
+                </div>
+            </center>
         </div>
 
 
@@ -99,6 +104,10 @@
         <!--Contact section starts-->
         <div id="contact">
             <center>
+                <div class="grow">
+                    <h3>Contact Me!</h3>
+                </div>
+                <hr>
                 <div class="grow" id="icons">
                     <a href="https://linkedin.com/in/kratinjay" target="_blank"><i class="fab fa-linkedin"></i></a>
                     <a href="https://facebook.com/kratinjay" target="_blank"><i class="fab fa-facebook"></i></a>
@@ -106,13 +115,14 @@
                     <a href="https://twitter.com/kratinjay" target="_blank"><i class="fab fa-twitter"></i></a>
                     <a href="https://github.com/kratinjay" target="_blank"><i class="fab fa-github"></i></a>
                 </div>
-
+                <hr>
             </center>
+            <div id="footer">
+                <p>Hosted on GITHUB Pages</p>
+            </div>
         </div>
 
-        <footer>
-            <p>Hosted on GITHUB Pages</p>
-        </footer>
+
 
     </div>
 </body>
