--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
             <center>
                 <p>
                     Hi,👋 My name is Kratinjay Gupta.</br> I am Computer Science student, pursuing Bachelors in Computer
-                    Application(BCA), currently learning Full-Stack Web Development, I love collaborating in and Open
-                    Source. I’m a 21
-                    year old Web Developer living in Kanpur, India.
+                    Application(BCA), currently learning Full-Stack Web Development, I love collaborating in Open
+                    Source.
+               
                 </p>
             </center>
         </div>
