--- a/index.html
+++ b/index.html
@@ -46,9 +46,6 @@
                             <a style="color:#E0E0E0; text-shadow: 2px 2px 4px #000000" class="nav-link" href="#about">ABOUT</a>
                         </li>
                         <li>
-                            <a style="color:#E0E0E0; text-shadow: 2px 2px 4px #000000" class="nav-link" href="#portfolio">PORTFOLIO</a>
-                        </li>
-                        <li>
                             <a style="color:#E0E0E0; text-shadow: 2px 2px 4px #000000" class="nav-link" href="#contact">CONTACT</a>
                         </li>
                         <li class="nav-item dropdown">
@@ -57,9 +54,8 @@
                                 PROJECTS
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                <a class="dropdown-item" href="#">Under Development...</a>
-                                <a class="dropdown-item" href="#">...</a>
-                                <a class="dropdown-item" href="#">...</a>
+                                <a class="dropdown-item" href="https://eatspecial.in/">EatSpecial.in</a>
+                                <a class="dropdown-item" href="https://github.com/kratinjay/Scientific-Calculator">Scientific Calculator</a>
                             </div>
                         </li>
                     </ul>
@@ -93,14 +89,6 @@
                 </p>
             </center>
         </div>
-
-        <!--portfolio section starts-->
-        <div id="portfolio">
-            <center>
-                <h1>Coming Soon..</h1>
-            </center>
-        </div>
-
         <!--Contact section starts-->
         <div id="contact">
             <center>
