--- a/index.html
+++ b/index.html
@@ -98,15 +98,15 @@
                 <hr>
                 <div class="grow" id="icons">
                     <a href="https://linkedin.com/in/kratinjay" target="_blank"><i class="fab fa-linkedin"></i></a>
-                    <a href="https://facebook.com/kratinjay" target="_blank"><i class="fab fa-facebook"></i></a>
-                    <a href="https://instagram.com/kratinjay" target="_blank"><i class="fab fa-instagram"></i></a>
                     <a href="https://twitter.com/kratinjay" target="_blank"><i class="fab fa-twitter"></i></a>
                     <a href="https://github.com/kratinjay" target="_blank"><i class="fab fa-github"></i></a>
+                    <a href="https://github.com/kratinjay" target="_blank"><i class="fab fa-github"></i></a>
+
                 </div>
                 <hr>
             </center>
             <div id="footer">
-                <p>Hosted on GITHUB Pages</p>
+                <p>Made with ❤️ <br> Proudly hosted on GITHUB Pages</p>
             </div>
         </div>
 
