--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 		<div class="cta-block_04">
 			<h1>Connect with me!</h1>
 			<p>You can send me an email by clicking the button below 👇 for work related queries<br> also you can connect to me via various social media links</p>
-			<a href="kratinjay@gmail.com" class="btn btn-inverse btn-rounded"> 📧 Send Email</a>
+			<a href="mailto:kratinjay@gmail.com" class="btn btn-inverse btn-rounded"> 📧 Send Email</a>
 		</div> 
 
 	</main>
