--- a/contact-me.html
+++ b/contact-me.html
@@ -59,7 +59,7 @@
 	<div class="cta-block_04" style="background-color: #1b1b1b;">
 		<h1 class="contact-check">Connect with me!</h1>
 		<p>You can send me an email by clicking the button below 👇 for work related queries<br> also you can connect to me via various social media links</p>
-		<a href="kratinjay@gmail.com" class="btn btn-inverse btn-rounded"> 📧 Send Email</a>
+		<a href="mailto:kratinjay@gmail.com" class="btn btn-inverse btn-rounded"> 📧 Send Email</a>
 	</div> 
 
 	<footer class="footer-minimal footer-minimal-inverse" style="background: black;">
