--- a/portfolio.html
+++ b/portfolio.html
@@ -77,8 +77,8 @@
 							<img src="assets/img/onlinecr.png" alt="" class="img-cover">
 							<div class="portfolio-item-overlay">
 								<div class="portfolio-item-info">
-									<h2 class="portfolio-item-title">jourdain fashion</h2>
-									<h3 class="portfolio-item-category">branding</h3>
+									<h2 class="portfolio-item-title">Online Campus Recruitment</h2>
+									<h3 class="portfolio-item-category">This project is made using JAVA, MYSQL, XML</h3>
 								</div>
 							</div>
 						</div>
@@ -89,8 +89,8 @@
 							<img src="assets/img/scifi.png" alt="" class="img-cover">
 							<div class="portfolio-item-overlay">
 								<div class="portfolio-item-info">
-									<h2 class="portfolio-item-title">etoile building</h2>
-									<h3 class="portfolio-item-category">architecture</h3>
+									<h2 class="portfolio-item-title">Scientific Calculator</h2>
+									<h3 class="portfolio-item-category">This Project is made using HTML, CSS, JavaScript and JQuery</h3>
 								</div>
 							</div>
 						</div>
@@ -101,8 +101,8 @@
 							<img src="assets/img/placeholder-01.jpg" alt="" class="img-cover">
 							<div class="portfolio-item-overlay">
 								<div class="portfolio-item-info">
-									<h2 class="portfolio-item-title">illustrations</h2>
-									<h3 class="portfolio-item-category">graphic design</h3>
+									<h2 class="portfolio-item-title">Automatic Test-Paper Generator</h2>
+									<h3 class="portfolio-item-category">PHP Project</h3>
 								</div>
 							</div>
 						</div>
@@ -113,8 +113,8 @@
 							<img src="assets/img/wpthemes.png" alt="" class="img-cover">
 							<div class="portfolio-item-overlay">
 								<div class="portfolio-item-info">
-									<h2 class="portfolio-item-title">portraits</h2>
-									<h3 class="portfolio-item-category">photography</h3>
+									<h2 class="portfolio-item-title">Wordpress  Themes</h2>
+									<h3 class="portfolio-item-category">Some Wordpress Themes Developed by me</h3>
 								</div>
 							</div>
 						</div>
@@ -125,8 +125,8 @@
 							<img src="assets/img/" alt="" class="img-cover">
 							<div class="portfolio-item-overlay">
 								<div class="portfolio-item-info">
-									<h2 class="portfolio-item-title">pink color</h2>
-									<h3 class="portfolio-item-category">photography</h3>
+									<h2 class="portfolio-item-title">BootStrap Templates</h2>
+									<h3 class="portfolio-item-category"Portfolio template</h3>
 								</div>
 							</div>
 						</div>
