--- a/portfolio.html
+++ b/portfolio.html
@@ -74,7 +74,7 @@
 				</div>
 					<a href="">
 						<div class="portfolio-item">
-							<img src="assets/img/onlinecr.png" alt="" class="img-cover">
+							<img src="assets/img/onlinecr.png" alt="Project icon" class="img-cover">
 							<div class="portfolio-item-overlay">
 								<div class="portfolio-item-info">
 									<h2 class="portfolio-item-title">Online Campus Recruitment</h2>
@@ -86,7 +86,7 @@
 
 					<a href="">
 						<div class="portfolio-item">
-							<img src="assets/img/scifi.png" alt="" class="img-cover">
+							<img src="assets/img/scifi.png" alt="project icon" class="img-cover">
 							<div class="portfolio-item-overlay">
 								<div class="portfolio-item-info">
 									<h2 class="portfolio-item-title">Scientific Calculator</h2>
@@ -98,7 +98,7 @@
 						
 					<a href="">
 						<div class="portfolio-item">
-							<img src="assets/img/placeholder-01.jpg" alt="" class="img-cover">
+							<img src="assets/img/testpaper.png" alt="project icon" class="img-cover">
 							<div class="portfolio-item-overlay">
 								<div class="portfolio-item-info">
 									<h2 class="portfolio-item-title">Automatic Test-Paper Generator</h2>
@@ -110,7 +110,7 @@
 
 					<a href="">
 						<div class="portfolio-item">
-							<img src="assets/img/wpthemes.png" alt="" class="img-cover">
+							<img src="assets/img/wpthemes.png" alt="icon" class="img-cover">
 							<div class="portfolio-item-overlay">
 								<div class="portfolio-item-info">
 									<h2 class="portfolio-item-title">Wordpress  Themes</h2>
@@ -122,7 +122,7 @@
 
 					<a href="">
 						<div class="portfolio-item">
-							<img src="assets/img/" alt="" class="img-cover">
+							<img src="assets/img/bootstrap.png" alt="icon" class="img-cover">
 							<div class="portfolio-item-overlay">
 								<div class="portfolio-item-info">
 									<h2 class="portfolio-item-title">BootStrap Templates</h2>
@@ -134,11 +134,11 @@
 
 					<a href="">
 						<div class="portfolio-item">
-							<img src="assets/img/plugin.png" alt="" class="img-cover">
+							<img src="assets/img/plugin.png" alt="icon" class="img-cover">
 							<div class="portfolio-item-overlay">
 								<div class="portfolio-item-info">
-									<h2 class="portfolio-item-title">icons collection</h2>
-									<h3 class="portfolio-item-category">graphic design</h3>
+									<h2 class="portfolio-item-title">WordPress Plugin</h2>
+									<h3 class="portfolio-item-category">Under Development</h3>
 								</div>
 							</div>
 						</div>
@@ -156,7 +156,7 @@
 			</div>
 			<a href="https://www.siteseva.com/">
 				<div class="portfolio-item">
-					<img src="assets/img/siteseva.jpg" alt="" class="img-cover">
+					<img src="assets/img/siteseva.png" alt="siteseva" class="img-cover">
 					<div class="portfolio-item-overlay">
 						<div class="portfolio-item-info">
 							<h2 class="portfolio-item-title">Siteseva Freelance</h2>
@@ -168,7 +168,7 @@
 
 			<a href="https://sttabot.io/">
 				<div class="portfolio-item">
-					<img src="assets/img/sttabot.png" alt="" class="img-cover">
+					<img src="assets/img/sttabot.png" alt="sttabot" class="img-cover">
 					<div class="portfolio-item-overlay">
 						<div class="portfolio-item-info">
 							<h2 class="portfolio-item-title">Sttabot technlogy</h2>
