--- a/index.html
+++ b/index.html
@@ -43,21 +43,29 @@
 				<nav class="navigation">
 
 					<ul>
-						<li><a href="index.html">home</a></li>
-						<li><a href="about-me.html">about</a>
-						</li>
-						<li><a href="portfolio.html">portfolio</a>
-							<ul class="sub-nav">
-								<li><a href="">Online Campus recruitment</a></li>
-								<li><a href="">Scientific Calculator</a></li>
-								<li><a href="">test paper generator</a></li>
-								<li><a href="">Wordpres Plugin</a></li>
-								<li><a href="">wordpress site</a></li>
-								<li><a href="">Wordpress themes</a></li>
-							</ul>
-						</li>
-						<li><a href="contact-me.html">contact</a></li>
-					</ul>
+					<li><a href="index.html">home</a></li>
+					<li><a href="about-me.html">about</a>
+					</li>
+					<li><a href="portfolio.html">portfolio</a>
+						<ul class="sub-nav">
+							<li><a href="https://github.com/kratinjay/OnlineCR">Online Campus recruitment</a></li>
+							<li><a href="https://github.com/kratinjay/Scientific-Calculator">Scientific Calculator</a></li>
+							<li><a href="default.html">WordPress Plugin</a></li>
+							<li><a href="">WordPress sites -</a>
+								<ul class="sub-nav">
+								    <li><a href="https://www.elasticstoneusa.com/">Elasticstone</a></li>
+								    <li><a href="http://blackindigonaturals.com/">Black Indigo Naturals</a></li>
+								    <li><a href="https://www.techetarian.com/">Techetarian</a></li>
+								    <li><a href="https://yednaplaw.com/">Yednap</a></li>
+								    <li><a href="">Local site 1</a></li>
+								    <li><a href="">Local site 2</a></li>
+								</ul>
+							</li>
+							<li><a href="default.html">WordPress themes</a></li>
+						</ul>
+					</li>
+					<li><a href="contact-me.html">contact</a></li>
+				</ul>
 
 				</nav> <!-- /.navigation -->
 
