--- a/default.html
+++ b/default.html
@@ -37,22 +37,13 @@
 					<li><a href="about-me.html">about</a>
 					</li>
 					<li><a href="portfolio.html">portfolio</a>
-						<ul class="sub-nav">
+						<!--<ul class="sub-nav">
 							<li><a href="https://github.com/kratinjay/OnlineCR">Online Campus recruitment</a></li>
 							<li><a href="https://github.com/kratinjay/Scientific-Calculator">Scientific Calculator</a></li>
 							<li><a href="default.html">WordPress Plugin</a></li>
-							<li><a href="">WordPress sites -</a>
-                                <ul class="sub-nav">
-                                    <li><a href="">Elasticstone</a></li>
-                                    <li><a href="">Black Indigo Naturals</a></li>
-                                    <li><a href="">Techetarian</a></li>
-                                    <li><a href="">Yednap</a></li>
-                                    <li><a href="">Local site 1</a></li>
-                                    <li><a href="">Local site 2</a></li>
-                                </ul>
-                            </li>
+							<li><a href="">WordPress sites -</a></li>
 							<li><a href="default.html">Wordpress themes</a></li>
-						</ul>
+						</ul>-->
 					</li>
 					<li><a href="contact-me.html">contact</a></li>
 				</ul>
