--- a/portfolio.html
+++ b/portfolio.html
@@ -41,22 +41,14 @@
 					<li><a href="about-me.html">about</a>
 					</li>
 					<li><a href="portfolio.html">portfolio</a>
-						<ul class="sub-nav">
+						<!--<ul class="sub-nav">
 							<li><a href="https://github.com/kratinjay/OnlineCR">Online Campus recruitment</a></li>
 							<li><a href="https://github.com/kratinjay/Scientific-Calculator">Scientific Calculator</a></li>
 							<li><a href="default.html">WordPress Plugin</a></li>
 							<li><a href="">WordPress sites -</a>
-								<ul class="sub-nav">
-								    <li><a href="https://www.elasticstoneusa.com/">Elasticstone</a></li>
-								    <li><a href="http://blackindigonaturals.com/">Black Indigo Naturals</a></li>
-								    <li><a href="https://www.techetarian.com/">Techetarian</a></li>
-								    <li><a href="https://yednaplaw.com/">Yednap</a></li>
-								    <li><a href="">Local site 1</a></li>
-								    <li><a href="">Local site 2</a></li>
-								</ul>
 							</li>
 							<li><a href="default.html">WordPress themes</a></li>
-						</ul>
+						</ul>-->
 					</li>
 					<li><a href="contact-me.html">contact</a></li>
 				</ul>
@@ -104,13 +96,13 @@
 						</div>
 					</a>
 						
-					<a href="">
+					<a href="https://github.com/kratinjay/Bootstrap-Templates">
 						<div class="portfolio-item">
-							<img src="assets/img/testpaper.png" alt="project icon" class="img-cover">
+							<img src="assets/img/bootstrap.png" alt="project icon" class="img-cover">
 							<div class="portfolio-item-overlay">
 								<div class="portfolio-item-info">
-									<h2 class="portfolio-item-title">Automatic Test-Paper Generator</h2>
-									<h3 class="portfolio-item-category">PHP Project</h3>
+									<h2 class="portfolio-item-title">Bootstrap Templates</h2>
+									<h3 class="portfolio-item-category">Some HTML, CSS and Bootstrap Templates</h3>
 								</div>
 							</div>
 						</div>
@@ -121,13 +113,13 @@
 							<img src="assets/img/wpthemes.png" alt="icon" class="img-cover">
 							<div class="portfolio-item-overlay">
 								<div class="portfolio-item-info">
-									<h2 class="portfolio-item-title">Wordpress  Themes</h2>
-									<h3 class="portfolio-item-category">Some Wordpress Themes Developed by me</h3>
+									<h2 class="portfolio-item-title">WordPress  Sites</h2>
+									<h3 class="portfolio-item-category">Some WordPress sites Developed by me</h3>
 								</div>
 							</div>
 						</div>
 					</a>
-
+<!--
 					<a href="">
 						<div class="portfolio-item">
 							<img src="assets/img/bootstrap.png" alt="icon" class="img-cover">
@@ -151,8 +143,7 @@
 							</div>
 						</div>
 					</a>
-
-					<div class="clearfix"></div>
+-->
 
 				</div> 
 
@@ -167,7 +158,7 @@
 					<img src="assets/img/siteseva.png" alt="siteseva" class="img-cover">
 					<div class="portfolio-item-overlay">
 						<div class="portfolio-item-info">
-							<h2 class="portfolio-item-title">Siteseva Freelance</h2>
+							<h2 class="portfolio-item-title">SiteSeva Freelance</h2>
 							<h3 class="portfolio-item-category">2 Years and 7 months extensive experience.</h3>
 						</div>
 					</div>
@@ -179,7 +170,7 @@
 					<img src="assets/img/sttabot.png" alt="sttabot" class="img-cover">
 					<div class="portfolio-item-overlay">
 						<div class="portfolio-item-info">
-							<h2 class="portfolio-item-title">Sttabot technlogy</h2>
+							<h2 class="portfolio-item-title">Sttabot technology</h2>
 							<h3 class="portfolio-item-category">WordPress Developer and Support Executive</h3>
 							<h3 class="portfolio-item-category"></h3>
 						</div>
