--- a/default.html
+++ b/default.html
@@ -55,10 +55,17 @@
 	</header> <!-- /.main-header-->
 
 
-	<div class="cta-block_04" style="background-color: #1b1b1b;">
-		<h1 class="contact-check">Under development</h1>
-		<p>Sorry, this project is in development phase right now. </p>
-	</div> 
+	<div class="info-block_06">
+				<h1><i class="fab fa-wordpress"></i> Take a look in to some WordPress sites developed by me.</h1>
+				<ul>
+                                    <li><a href="https://www.elasticstoneusa.com/"><h3>Elasticstone</h3></a></li>
+                                    <li><a href="http://blackindigonaturals.com/"><h3>Black Indigo Naturals</h3></a></li>
+                                    <li><a href="https://www.techetarian.com/"><h3>Techetarian</h3></a></li>
+                                    <li><a href="https://yednaplaw.com/"><h3>Yednap</h3></a></li>
+                                    <li><a href=""><h3>Local site 1</h3></a></li>
+                                    <li><a href=""><h3>Local site 2</h3></a></li>
+                                </ul>
+			</div> 
 
 	<footer class="footer-minimal footer-minimal-inverse" style="background: black;">
 
@@ -96,13 +103,6 @@
 				<li><a href="contact-me.html">contact</a></li>
 			</ul>
 		</nav>
-
-		<ul class="social-links">
-			<li><a href="#">facebook</a></li>
-			<li><a href="#">instagram</a></li>
-			<li><a href="#">behance</a></li>
-			<li><a href="#">dribbble</a></li>
-		</ul>
 			
 	</div> 
 	
