--- a/portfolio.html
+++ b/portfolio.html
@@ -68,7 +68,7 @@
 				<a href="about-me.html" style="float: left;" class="btn btn-inverse btn-rounded">learn more about me</a>
 			</div> 
 
-			<div class="irregular-grid-3-columns">
+			<div class="irregular-grid-3-columns container">
 				<div>
 					<h1 class="check">Projects:-</h1>
 				</div>
