--- a/default.html
+++ b/default.html
@@ -55,16 +55,16 @@
 	</header> <!-- /.main-header-->
 
 
-	<div class="info-block_06">
+	<div class="info-block_06" style="color:white; text-decoration:none;">
 				<h1><i class="fab fa-wordpress"></i> Take a look in to some WordPress sites developed by me.</h1>
-				<ul>
+				<center><ul>
                                     <li><a href="https://www.elasticstoneusa.com/"><h3>Elasticstone</h3></a></li>
                                     <li><a href="http://blackindigonaturals.com/"><h3>Black Indigo Naturals</h3></a></li>
                                     <li><a href="https://www.techetarian.com/"><h3>Techetarian</h3></a></li>
                                     <li><a href="https://yednaplaw.com/"><h3>Yednap</h3></a></li>
                                     <li><a href=""><h3>Local site 1</h3></a></li>
                                     <li><a href=""><h3>Local site 2</h3></a></li>
-                                </ul>
+				</ul></center>
 			</div> 
 
 	<footer class="footer-minimal footer-minimal-inverse" style="background: black;">
